# tractv

./: .gitignore  README.md  main.py  manage.py  package-lock.json  package.json  pyproject.toml
api/: models.py  service.py
common/templates/common/: base.djhtml
common/templates/cotton/common/: card.html  navbar.html
crew_members/: apps.py  models.py
dashboard/: views.py
dashboard/templates/dashboard/: index.djhtml
episodes/: apps.py  models.py
guest_stars/: apps.py  models.py
seasons/: apps.py  models.py
shows/: models.py  views.py
shows/templates/cotton/shows/: add_review.html  episode_comment.html  episode_section.html  rating.html  tabs.html
shows/templates/shows/: index.djhtml
tractv/: asgi.py  settings.py  urls.py  wsgi.py
